update minor aboutus, home, quiz
- converting img src file to link hosting

--- a/About Us/AboutUsStyle.css
+++ b/About Us/AboutUsStyle.css
@@ -135,7 +135,7 @@ header {
     grid-template-columns: repeat(auto-fit,minmax(25rem,auto));
     align-items: stretch;
     gap: 1.5rem;
-    background-image: url(/Asset/bgprofilupper.png);
+    background-image: url(https://iili.io/JIr7Kqg.png);
     /* background-color: #4A6409; */
 }
 
