button navbar header

--- a/Home/HomeStyle.css
+++ b/Home/HomeStyle.css
@@ -948,12 +948,15 @@ footer {
 /* Global styles remain unchanged */
 
 /* ===================================== */
-/* Responsive Breakpoint Max Width 767px */
+/* Responsive Breakpoint Max Width 768px */
 /* ===================================== */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
     .section{
         padding: 60px 20px;
     }
+    /* section{
+        max-width: 768px;
+    } */
 
     header {
         position: fixed;
@@ -966,13 +969,59 @@ footer {
         justify-content: space-between;
         align-items: center;
         padding: 35px 0.9rem;
-        background-color: #4A6409;
+        background-color: #ffffff;
     }
     
     .navbar{
         display: none;
     }
     
+    /* navbar dropdown */
+    .dropbtn {
+        background-color: #607e13;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: var(--button-color);
+    }
+    
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        right: 0;
+        z-index: 1;
+    }
+    
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    
+    .dropdown a:hover {
+        background-color: var(--button-color);
+    }
+    
+    .show {
+        display: block;
+    }
+    
+
     #menu-icon {
         color: var(--second-color);
         cursor: pointer;
