--- a/Product/ProductStyle.css
+++ b/Product/ProductStyle.css
@@ -960,11 +960,175 @@ footer {
     .item p {
         font-size: large;
     }
+
+    /* FOOTER */
+    .footer .footer-left,
+    .footer .footer-center,
+    .footer .footer-right {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: left;
+        font-size: larger;
+    }
+
+    .line {
+        width: 100%;
+    }
 }
+
+
 
 /* RESPONSIVE TABLET */
 @media (min-width: 768px) and (max-width: 1024px){
-
+    header {
+        position: fixed;
+        width: 100%;
+        height: 59px;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 35px 0.9rem;
+        background-color: #ffffff;
+    }
+    
+    .navbar{
+        display: none;
+    }
+    
+    #menu-icon {
+        color: var(--second-color);
+        cursor: pointer;
+        display: flex;
+        margin: 0 0 0 29rem;
+        padding: 0;
+        flex-grow: 1;
+        height: 20px;
+    }
+    
+    .logo{
+        bottom: 20rem;
+    }
+    
+    /* MAIN */
+    .desc{
+        max-width: 1280px;
+        max-height: 105vh;
+        display: inline-block;
+        flex-direction: column;
+        padding: 5% 4%;
+    }
+    
+    .grid {
+        width: 50%;
+        height: auto;
+        margin-left: 10px;
+        z-index: 2;
+        display: flexbox;
+    }
+    
+    .column img {
+        width: 90%;
+        height: 90%;
+    }
+    
+    .desc-text{
+        width: 100%;
+        z-index: 1;      
+    }
+    
+    .desc-text h2 {
+        width: 50%;
+        height: 60%;
+        font-size: 10vw;
+        vertical-align: middle;
+    }
+    
+    .desc-text p {
+        width: 100%;
+        max-height: 300px;
+        display: flex;
+        padding: 20px 10px;
+        margin-top: 20px;
+        font-size: large;
+    }
+    
+    .buttons {
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        gap : auto;
+        text-align: center;
+        margin: 10px 0 0;
+    }
+    
+    /* product*/
+    .product{
+        max-width: 1280px;
+        display: flex;
+        flex-direction: column;
+        position: sticky;
+        text-align: center;
+        padding: 0 20px;
+        margin-top: 30px;
+    }
+    
+    .product-text h2 {      
+        font-size: 8vw;
+    }
+    
+    .tab{
+        margin: 5% 0;
+        flex-direction: row;
+        align-content: center;
+    }
+    
+    .tab button{
+        margin: 0;
+    }
+    
+    /* label diskon */
+    #discount {
+        width: 13rem;
+        margin: -3.5 rem -1.8rem;
+    }
+    
+    #DC {
+        margin-top: -10rem;
+        padding: 3.5rem;
+        float: left;
+    }
+    
+    /* manfaat */
+    #grid {
+        padding: 50px 30px 50px 30px;
+    }
+    
+    .item h4 {
+        font-size: larger;
+    }
+    
+    .item p {
+        font-size: large;
+    }
+    
+    /* FOOTER */
+    .footer .footer-left,
+    .footer .footer-center,
+    .footer .footer-right {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: left;
+        font-size: larger;
+    }
+    
+    .line {
+        width: 100%;
+    }
 }
 
 
@@ -976,16 +1140,5 @@ footer {
     header {
         padding-top: 40px;
     }
-}
-
-@media (max-width: 880px) {
     
-    .footer .footer-left,
-    .footer .footer-center,
-    .footer .footer-right {
-        display: block;
-        width: 100%;
-        margin-bottom: 40px;
-        text-align: left;
-    }
 }
