--- a/CSS/ProductStyle.css
+++ b/CSS/ProductStyle.css
@@ -257,7 +257,7 @@ header{
     margin-right: 7.01px;
 }
 
-.buttons{
+.read{
     display: flex;
     justify-content: center;
     /* margin-top: 58px; */
@@ -267,7 +267,7 @@ header{
     margin: 58px 30px 30px 0px;
 }
 
-.buttons button{
+.read{
     display: flex;
     border: none;
     background: #ffffff;
@@ -281,7 +281,7 @@ header{
     align-items: center;
 }
 
-.buttons button:hover{
+.read:hover{
     background: #96AD39;
     color: var(--bg-color);
     transition: 0.2 all linear;
