--- a/CSS/ProductStyle.css
+++ b/CSS/ProductStyle.css
@@ -287,6 +287,38 @@ header{
     transition: 0.2 all linear;
 }
 
+.buttons{
+    display: flex;
+    justify-content: center;
+    /* margin-top: 58px; */
+    background: #ffffff;
+    width: 100%;
+    align-items: center;
+    margin: 58px 30px 30px 0px;
+
+}
+
+.buttons button{
+    display: flex;
+    border: none;
+    background: #ffffff;
+    font: 'grandstander';
+    font-size: 20px;
+    color: #4A6409;
+    font-weight: bolder;
+    padding: 20px;
+    width: fit-content;
+    margin: 0;
+    align-items: center;
+}
+
+.button:hover{
+    background: #96AD39;
+    color: var(--bg-color);
+    transition: 0.2 all linear;
+}
+
+
 .but img{
     width: 52px;
     height: 52px;
