--- a/CSS/HomeStyle.css
+++ b/CSS/HomeStyle.css
@@ -576,6 +576,18 @@ header{
     margin-top: 100px;
 }
 
+.box a{
+    border-radius: 5px;
+    color: #ffffff;
+    background-color: var(--button-color);
+    outline: none;
+    border: none;
+    font-size: 20px;
+    padding: 5px;
+    margin-left: 700px; 
+    margin-top: 100px;
+}
+
 /* Play Quiz */
 #quiz-container {
     text-align: center;
